# harness-bloat-bench

./: .gitignore  README.md  harness_core_metrics.md  pyproject.toml  run_matrix.py  schedule_harbor_tasks.py
harness_bloat_bench/: __init__.py  openrouter_codex.py  ui_server.py
harness_bloat_bench/cli/: __init__.py  run_matrix.py  schedule_harbor_tasks.py
harness_bloat_bench/ui/: __init__.py  server.py
harness_bloat_bench/ui/static/: app.js
harness_bloat_bench/ui_static/: app.css  index.html
scripts/: download_terminal_bench_data.sh  run_smoke_task.sh  run_terminal_metrics_smoke.sh
tasks/terminal-metrics-smoke/: README.md
tasks/terminal-metrics-smoke/ls-curl-example/: instruction.md
tasks/terminal-metrics-smoke/ls-curl-example/environment/: Dockerfile
tasks/terminal-metrics-smoke/ls-curl-example/solution/: solve.sh
tasks/terminal-metrics-smoke/ls-curl-example/tests/: test.sh
tasks/terminal-metrics-smoke/ls-curl-headers/: instruction.md  task.toml
tasks/terminal-metrics-smoke/ls-curl-headers/environment/: Dockerfile
tasks/terminal-metrics-smoke/ls-curl-headers/solution/: solve.sh
tasks/terminal-metrics-smoke/ls-curl-headers/tests/: test.sh
